--- a/css/styles.css
+++ b/css/styles.css
@@ -281,6 +281,36 @@ footer{
     padding-bottom: 20px;
 }
 
+
+.preloader{
+    position:fixed;
+    width:100%;
+    height:100vh;
+    z-index:100000;
+    background-color: white;
+    top: 0;
+    display:flex;
+    align-items: center;
+  }
+  
+  .preloader img{
+    animation: spin 3s ease;
+    transition: all;
+    width: 80px;
+    margin: auto;
+  }
+  
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    
+    100% {
+      transform: rotate(720deg);
+    }
+  }
+  
+
 @media only screen and (max-width: 600px) {
 
 
