--- a/css/styles.css
+++ b/css/styles.css
@@ -29,9 +29,32 @@ p {
     font-weight: normal;
     font-size: 14px;
     line-height: 182.69%;
+}
 
-    /* border: 1px dashed #48C0AA;
-    border-radius: 15px; */
+#introTitle{
+    font-size: 1em;
+    font-weight:600;
+    letter-spacing: 0.2em;
+    color: #FD636B;
+}
+
+#introLocation{
+    font-size: .9em;
+    line-height: 2px;
+    font-weight:normal;
+    letter-spacing: 0.2em;
+}
+
+#introSummary{
+    font-family: 'Roboto Condensed', sans-serif;
+    padding-top: 10px;
+    font-weight:900;
+    letter-spacing: .02em;
+    text-transform: uppercase;
+    line-height: 1.6em;
+    font-size: 1.5em;
+    font-stretch: ultra-condensed;
+    color: #FD636B;
 }
 
 ul {
@@ -122,11 +145,10 @@ nav{
 }
 
 .heroBanner {
-    padding: 120px 0 100px 0;
+    padding: 100px 0 30px 0;
     text-align: center;
     position: relative;
-    background-color: #FAACA8;
-    background-image: linear-gradient(19deg, #f8c9be 0%, #dfddfd 100%);
+    background-image: linear-gradient(19deg, #ffdcd7 0%, #d0e8ff 100%);
 }
 
 
@@ -189,7 +211,7 @@ footer{
 }
 
 #logo{
-    width: 278px;
+    width: 250px;
    
 }
 
@@ -339,7 +361,7 @@ footer{
         align-content: center;
     }
     #logo{
-        width: 200px;
+        width: 220px;
         }
     .logo{
 
@@ -350,8 +372,8 @@ footer{
     .navContainer{
         display: flex;
         float: right;
-        width: 50px;
-        padding-right: 20px;
+        width: 40px;
+        padding-right: 40px;
     
     }
 
@@ -361,7 +383,7 @@ footer{
 
     .heroBanner {
         height: auto;
-        padding:30% 10% 10% 10%;
+        padding:25% 10% 8% 10%;
         text-align: center;
     }
 
